--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <!-- The video -->
 <video autoplay plays-inline loop id="myVideo">
-    <source src="/assets/Ab Web video.mp4" type="video/mp4">
+    <source src="/Ab Web video.mp4" type="video/mp4">
   </video>
   
   <!-- Optional: some overlay text to describe the video -->
