--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <source src="/Ab Web video.mp4" type="video/mp4">
   </video>
 
+    <script>
+    document.getElementById('vid').play();
+ </script>
+
 
  
 
