--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
 
                 <!-- The video -->
-<video autoplay plays-inline loop id="myVideo">
+<video autoplay muted plays-inline loop id="myVideo">
     <source src="/Ab Web video.mp4" type="video/mp4">
   </video>
 
